--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="menu_slideshow">Slideshow</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="ebadep_a">EBADEP-A</string>
+    <string name="bdi_ii">BDI-II</string>
+    <string name="epd">EPD</string>
 </resources>
